Author, Member validation